console,account: Fix table header right alignment

--- a/pkg/webui/console/components/events/events.styl
+++ b/pkg/webui/console/components/events/events.styl
@@ -106,7 +106,7 @@ $event-container-height = 40px
 
 .body
   overflow: hidden
-  background-color: var(--c-bg-brand-extralight)
+  background-color: var(--c-bg-neutral-light)
   flex-grow: 1
   position: relative
 
